[gd_scene load_steps=6 format=3 uid="uid://d0bwou0uv5vxq"]

[ext_resource type="Script" uid="uid://bc50mveda1pm5" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cx80jaknyioqs" path="res://assets/sprites/play_button.webp" id="2"]
[ext_resource type="Texture2D" uid="uid://7dr0deucyi20" path="res://assets/sprites/background_sky_gradient.webp" id="3"]
[ext_resource type="Texture2D" uid="uid://b0qe48yi0u046" path="res://assets/sprites/clouds_mixed_original.webp" id="4"]
[ext_resource type="Texture2D" uid="uid://duopplu6luejr" path="res://assets/sprites/menu_button.webp" id="5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
stretch_mode = 1

[node name="CloudOverlay" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4")
stretch_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 48
text = "SKY DROP"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")
stretch_mode = 5

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5")
stretch_mode = 5

[node name="CreditsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0

[node name="CreditsTitle" type="Label" parent="CreditsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Created by"
horizontal_alignment = 1

[node name="MiloCredit" type="RichTextLabel" parent="CreditsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][url=https://milocurran.github.io/]Milo Curran[/url][/center]"
fit_content = true

[node name="AlanCredit" type="RichTextLabel" parent="CreditsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][url=https://promptcade.com/alanson]Alan Son[/url][/center]"
fit_content = true

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -25.0
text = "v1.0.0"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.7)

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="meta_clicked" from="CreditsContainer/MiloCredit" to="." method="_on_credit_link_clicked"]
[connection signal="meta_clicked" from="CreditsContainer/AlanCredit" to="." method="_on_credit_link_clicked"]
